@@ -29,6 +29,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
 
 
+import org.springframework.security.oauth2.server.authorization.authentication.OAuth2ClientAuthenticationToken;
 import org.springframework.security.oauth2.server.authorization.client.RegisteredClient;
 import org.springframework.security.oauth2.server.authorization.config.annotation.web.configuration.OAuth2AuthorizationServerConfiguration;
 import org.springframework.security.oauth2.server.authorization.config.annotation.web.configurers.OAuth2AuthorizationServerConfigurer;
@@ -64,17 +65,16 @@ public class AuthorizationConfig {
     /**
      * 个性化 JWT token
      */
-    public static class CustomOAuth2TokenCustomizer implements OAuth2TokenCustomizer<JwtEncodingContext> {
-
-        @Override
-        public void customize(JwtEncodingContext context) {
+    @Bean
+    public OAuth2TokenCustomizer<JwtEncodingContext> jwtCustomizer(){
+        return context -> {
             RegisteredClient registeredClient = context.getRegisteredClient();
             Authentication oAuth2ClientAuthenticationToken = context.getPrincipal();
             MongoOperations mongoOperations = SpringContextHelper.getBean(MongoOperations.class);
-            Set<ObjectId> scopes = context.getAuthorizedScopes().stream().map(ObjectIdDeserialize::toObjectId).collect(Collectors.toSet());
+            Set<ObjectId> scopes = registeredClient.getScopes().stream().map(ObjectIdDeserialize::toObjectId).collect(Collectors.toSet());
             Criteria criteria = Criteria.where("_id").in(scopes);
-            List<RoleEntity> roleEntities = mongoOperations.find(Query.query(criteria),RoleEntity.class);
-            List<String> roleNames = roleEntities.stream().map(RoleEntity::getName).collect(Collectors.toList());
+            List<RoleEntity> roleEntities = mongoOperations.find(Query.query(criteria), RoleEntity.class);
+            List<String> roleNames = roleEntities.stream().map(RoleEntity::getName).toList();
             List<String> roles = new ArrayList<>();
             roles.add("$everyone");
             roles.addAll(roleNames);
@@ -102,7 +102,7 @@ public class AuthorizationConfig {
                 context.getClaims().claim("user_id", userDetail.getUserId())
                         .claim("email", userDetail.getEmail());
             }
-        }
+        };
     }
 
     /**
@@ -111,15 +111,9 @@ public class AuthorizationConfig {
     @Bean
     @Order(Ordered.HIGHEST_PRECEDENCE)
     public SecurityFilterChain authorizationServerSecurityFilterChain(HttpSecurity http) throws Exception {
-        OAuth2AuthorizationServerConfigurer authorizationServerConfigurer =
-                new OAuth2AuthorizationServerConfigurer();
-        RequestMatcher endpointsMatcher = authorizationServerConfigurer
-                .getEndpointsMatcher();
-
-        http.setSharedObject(OAuth2TokenCustomizer.class, new CustomOAuth2TokenCustomizer());
-
-        http
-                .securityMatcher(endpointsMatcher)
+        OAuth2AuthorizationServerConfigurer authorizationServerConfigurer = OAuth2AuthorizationServerConfigurer.authorizationServer();
+        RequestMatcher endpointsMatcher = authorizationServerConfigurer.getEndpointsMatcher();
+        http.securityMatcher(endpointsMatcher)
                 .authorizeHttpRequests(authorizeRequests -> authorizeRequests
                         .anyRequest().authenticated())
                 .with(authorizationServerConfigurer, Customizer.withDefaults())
